--- a/estilos.css
+++ b/estilos.css
@@ -39,9 +39,20 @@ p, li {
 nav ul{
     position: absolute;
     top: 25px;
-    right: 0;
+        right: 0;,
+        display: inline;
+
+        text-shadow:0px 5px 10px red;
+
+    }
+
     
-}
+    
+
+
+    
+    
+
 
 
 
@@ -90,10 +101,11 @@ section h3{
     text-align: center;
 }
 
+/* https://angrytools.com/css-flex/ para ver os modelos de centralizar o diplay flex */
 .box{
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     
 }
 .box-p {
@@ -107,6 +119,8 @@ section h3{
     transition: 3s;
 
 }
+/* FOOTER = RODAPÉ */
+
 footer{
     background-color: green;
     text-align: center;
@@ -115,6 +129,8 @@ footer{
 footer p:hover{
     color: red;
     cursor: pointer;
+  
+
     
 
 }
